trunk/Archive2/6d/e810f7785a18f5/output
main.cpp: In function 'int main()':
main.cpp:6:9: error: 'foo' does not name a type
     new foo;
         ^
