trunk/Archive2/6d/e810f7785a18f5/main.cpp
void foo();
struct foo {};

int main()
{
    new foo;
}